--- a/.anima/components.json
+++ b/.anima/components.json
@@ -1,1 +1,1 @@
-{"matches":{}}
+{"matches":{"334eebbb175dbcf1431620d19e7f5889a609baa4":{"id":"src/TestimonialCard/TestimonialCard#TestimonialCard","source":{"author":"Bence Puschmann","matchedAt":1738860990891,"type":"manual"}}}}
