--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-icons": "^5.4.0",
+    "react-infinite-logo-slider": "^1.1.4",
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
